// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fullstack should pick up from browser correctly 1`] = `
<div>
  {"view":"view2","bar":1}
</div>
`;

exports[`fullstack should pick up from browser correctly with invalid params 1`] = `
<div>
  {"view":"view2"}
</div>
`;

exports[`fullstack should react correctly to a browser back + redirect 1`] = `
<div>
  {"view":"view1","bar":4}
</div>
`;

exports[`fullstack should react correctly to browser back + fwd 1`] = `
<div>
  {"view":"view1","bar":4}
</div>
`;

exports[`fullstack should react correctly to browser back + fwd 2`] = `
<div>
  {"view":"view2","bar":2}
</div>
`;

exports[`fullstack should react correctly to browser back + fwd 3`] = `
<div>
  {"view":"view1","bar":4}
</div>
`;

exports[`fullstack updating state 3 times with changes should cause 3 diffs and pushes 1`] = `
<div>
  {"view":"view2","foo":"bar"}
</div>
`;

exports[`fullstack updating state 3 times with changes should cause 3 diffs and pushes 2`] = `
<div>
  {"view":"view2","foo":"baz"}
</div>
`;

exports[`fullstack updating state 3 times with changes should cause 3 diffs and pushes 3`] = `
<div>
  {"view":"view2","foo":"bar"}
</div>
`;

exports[`fullstack updating state multiple times with same value should cause a single diff and push 1`] = `
<div>
  {"view":"view2","bar":4}
</div>
`;

exports[`fullstack updating state with something valid and serialized should work 1`] = `
<div>
  {"view":"view1","bar":2}
</div>
`;

exports[`fullstack updating state with something valid should work 1`] = `
<div>
  {"view":"view2","bar":4}
</div>
`;
